除了地图暂不可用以外其他功能正常，移除了通知功能，没做出来

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="oldManName">老人姓名</string>
     <string name="contactNumber">联系方式</string>
     <string name="addOldManInfo">增加老人信息</string>
+    <string name="showOnMap">在地图中显示</string>
 </resources>
